feat(cmd.server,core): jdk 20, add to httpd and pause, refactor credentials and command
- httpd command: add basic auth and exit route
- pause command: add forever and interrupt
- extract credentials models from command
- refator command classes/interfaces hierarchy